--- a/templates/admin/skateparks.html.twig
+++ b/templates/admin/skateparks.html.twig
@@ -13,8 +13,16 @@
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('admin_skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="Skatepark"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('admin_skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="Skatepark-icon"></div>
+            <div class="element">
+                <a href="{{ path('admin_skateparks') }}">
+                        <img class="title logoBig" src="{{ asset('icon/skateparks_titre.png') }}" alt="Skatepark">
+                </a>
+            </div>
+            <div class="element">
+                <a href="{{ path('admin_skateparks') }}">
+                        <img class="title logoBig" src="{{ asset('icon/skateparks.png') }}" alt="Skatepark-icon">
+                </a>
+            </div>
         </div>
         <div class="line"></div>
         <div class="">
@@ -63,18 +71,24 @@
                         <img class="img-card" src="{{ asset('uploads/cover/'~skatepark.coverFilename) }}" alt="photo-skatepark">
                     </b>
                 </div>
-
-                {#             {% if skatepark.club %} #}
-                {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
-                {#                    {% endif %} #}
-
+                <div class="card-ic">
+                    <div id="adm-btn" class="adm-btn">
+                        <div class="ic" ><a id="link1" href="{{ path('admin_skatepark', {"id": skatepark.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le skatepark">
+                                <br><h4 class="pad5">Voir le skatepark</h4></a>
+                        </div>
+                        <div class="ic" ><a id="link2" href="{{ path('admin_skatepark_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un skatepark">
+                                <br><h4 class="pad5">Créer un skatepark</h4></a>
+                        </div>
+                        <div class="ic" ><a id="link3" href="{{ path('admin_skatepark_update', {"id": skatepark.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier un skatepark">
+                                <br><h4 class="pad5">Modifier un skatepark</h4></a>
+                        </div>
+                        <div class="ic" ><a id="link4" href="{{ path('admin_skatepark_delete', {"id": skatepark.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le skatepark">
+                                <br><h4 class="pad5">Supprimer le skatepark</h4></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <ul class="adm-btn">
-                <li><a id="link1" class="pad5" href="{{ path('admin_skatepark', {"id": skatepark.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le skatepark"><br><h4>Voir le skatepark</h4></a></li>
-                <li><a id="link2" class="pad5" href="{{ path('admin_skatepark_create', {"id": skatepark.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un skatepark"><br><h4>Créer un skatepark</h4></a></li>
-                <li><a id="link3" class="pad5" href="{{ path('admin_skatepark_update', {"id": skatepark.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier un skatepark"><br><h4>Modifier un skatepark</h4></a></li>
-                <li><a id="link4" class="pad5" href="{{ path('admin_skatepark_delete', {"id": skatepark.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le skatepark"><br><h4>Supprimer le skatepark</h4></a></li>
-            </ul>
         {% endfor %}
+
     </section>
 {% endblock main%}
