--- a/templates/profile/session_create.html.twig
+++ b/templates/profile/session_create.html.twig
@@ -43,7 +43,7 @@
                     {{ form_widget(sessionForm.town) }}
 
                     {{ form_label(sessionForm.area) }}
-                    {{ form_widgetsessionbForm.area) }}
+                    {{ form_widget(sessionbForm.area) }}
 
                     {{ form_label(sessionForm.coverfilename) }}
                     {{ form_widget(sessionForm.coverfilename) }}
