--- a/templates/profile/skatepark.html.twig
+++ b/templates/profile/skatepark.html.twig
@@ -128,8 +128,9 @@
             <div class="card-text">
                 <div>
                     <ul class="adm-btn">
-                        <li><a id="link1" class="pad5" href="{{ path('profile_skatepark', {"id": skatepark.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le skatepark"><br><h4>Voir le skatepark</h4></a></li>
                         <li><a id="link2" class="pad5" href="{{ path('profile_skatepark_create', {"id": skatepark.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un skatepark"><br><h4>Créer un skatepark</h4></a></li>
+                        <li><a id="link3" class="pad5" href="{{ path('profile_skatepark_update', {"id": skatepark.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier le skatepark"><br><h4>Modifier le skatepark</h4></a></li>
+                        <li><a id="link4" class="pad5" href="{{ path('profile_skatepark_delete', {"id": skatepark.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le skatepark"><br><h4>Supprimer le skatepark</h4></a></li>
                     </ul>
                 </div>
                 <div class="justifyBox">
