--- a/templates/admin/session.html.twig
+++ b/templates/admin/session.html.twig
@@ -13,8 +13,16 @@
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('admin_sessions') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Session"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('admin_sessions') }}" src="{{ asset('icon/session.png') }}" alt="Session-icon"></div>
+            <div class="element">
+                <a href="{{ path('admin_sessions') }}">
+                    <img class="title logoBig" href="{{ path('admin_sessions') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Sessions">
+                </a>
+            </div>
+            <div class="element">
+                <a href="{{ path('admin_sessions') }}">
+                    <img class="title logoBig" href="{{ path('admin_sessions') }}" src="{{ asset('icon/session.png') }}" alt="Sessions-icon">
+                </a>
+            </div>
         </div>
         <div class="line"></div>
         <div class="">
@@ -39,7 +47,7 @@
         </article>
         <article class="detail">
             <div class="card-text">
-                <div class="" id="tm">
+                <div class="" id="tmsession">
                     <div class="" id="tmbk">
                         <div id="abs1" class="absolute">
                             <b><img class="left logoBig resp arrow-left" src="{{ asset('icon/fleche_droite.png') }}" alt="Preview">
@@ -59,68 +67,9 @@
                     </div>
                     <div class="image">
                         <table>
-                            <tr>
-                                <td>Lundi</td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>fermé</td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>Mardi</td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td> 14:00 - </td>
-                                <td>21:00</td>
-                            </tr>
-                            <tr>
-                                <td>Mercredi</td>
-                            </tr>
-                            <tr>
-                                <td> 14:00 - </td>
-                                <td> 19:00</td>
-                            </tr>
-                            <tr>
-                                <td>Jeudi</td>
-                            </tr>
-                            <tr>
-                                <td> 14:00 - </td>
-                                <td>21:00</td>
-                            </tr>
-                            <tr>
-                                <td>Vendredi</td>
-                            </tr>
-                            <tr>
-                                <td> 14:00 - </td>
-                                <td>21:00</td>
-                            </tr>
-                            <tr>
-                                <td>Samedi</td>
-                            </tr>
-                            <tr>
-                                <td> 14:00 - </td>
-                                <td> 19:00</td>
-                            </tr>
-                            <tr>
-                                <td>Dimanche</td>
-                            </tr>
-                            <tr>
-                                <td> 14:00 - </td>
-                                <td> 19:00</td>
-                            </tr>
+
                         </table>
                     </div>
-                </div>
-            </div>
-            <div class="card-text">
-                <div class="list">
-                    <ul id="abs4" class="absolute indicators ">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
                 </div>
             </div>
         </article>
@@ -128,64 +77,44 @@
     <section>
         <article class="detail">
             <div class="card-text">
-                <div>
-                    <ul class="adm-btn">
-                        <li><a id="link3" class="pad5" href="{{ path('admin_session_update', {"id": session.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier un club"><br><h4>Modifier un club</h4></a></li>
-                        <li><a id="link4" class="pad5" href="{{ path('admin_session_delete', {"id": session.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club"><br><h4>Supprimer le club</h4></a></li>
-                        <li><a id="link2" class="pad5" href="{{ path('admin_session_create', {"id": session.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club"><br><h4>Créer un club</h4></a></li>
-                    </ul>
+                <div class="card-ic">
+                    <div id="adm-btn" class="adm-btn">
+                        <div class="ic" ><a id="link2" href="{{ path('admin_session_create', {"id": session.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer une session">
+                                <br><h4 class="pad5">Créer une session</h4></a>
+                        </div>
+                        <div class="ic" ><a id="link3" href="{{ path('admin_session_update', {"id": session.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier une session">
+                                <br><h4 class="pad5">Modifier une session</h4></a>
+                        </div>
+                        <div class="ic" ><a id="link4" href="{{ path('admin_session_delete', {"id": session.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le session">
+                                <br><h4 class="pad5">Supprimer le session</h4></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="justifyBox">
                     <p>{{ session.description }}{{ session.description }}</p>
                 </div>
             </div>
             <div class="card-text">
-                <div class="card-text">
                     <iframe src="https://www.google.com/maps?q=[{{session.address}}{{session.town}}]&output=embed" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
             </div>
-        </article>
-        <!--<div class="card" style="border:solid 2px darkblue;"><img class="car" src="{{ asset('uploads/darwin-cover.jpg') }}" alt="map" style="width:100%;"></div>-->
-        {#  {% for club in skatepark.clubs %}<p>{{ club.f }}</p>{% endfor %} #}
-        {#  {% if club.skatepark %}<h3>{{ club.skatepark.town }} {{ club.skatepark.area }}</h3>{% endif %} #}
-    </section>
-    <section class="section">
-        <article class="book-detail">
-            <article class="">
-            </article>
-            <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            {#        <div class="book-image">#}
-            {#            <img class="book-image" src="{{ book.image }}" title="{{ book.title }}" alt="photo de la couverture du livre">#}
-            {#        </div>#}
         </article>
     </section>
     <section class="section">
         <article>
-            <div class="card-text">
-                <h1>{{ session.title }}</h1><br>
-                <h3>{{ session.description }}</h3><br>
+            <div class="justifyBox">
                 <h3>{{ session.address }}</h3><br>
                 <h3>{{ session.town }}</h3><br>
                 <h3>{{ session.area }}</h3><br>
                 {% if session.startAt %}
-                    <h3>La session est commencé depuis: {{ session.startAt  | date("Y-m-d H:i:s" ) |format_datetime('full', 'short', locale='fr') }}</h3>
+                        <h3>La session est commencé depuis: {{ session.startAt  | date("Y-m-d H:i:s" ) |format_datetime('full', 'short', locale='fr') }}</h3><br>
                 {% else %}
-                    <h3>La session n'est pas commencé </h3>
+                        <h3>La session n'est pas commencé </h3><br>
                 {% endif %}
                 {% if session.finishedAt %}
-                    <h3>La session est finie depuis: {{ session.finishedAt  | date("Y-m-d H:i:s") |format_datetime('full', 'short', locale='fr') }}</h3>
+                        <h3>La session est finie depuis: {{ session.finishedAt  | date("Y-m-d H:i:s") |format_datetime('full', 'short', locale='fr') }}</h3><br>
                 {% else %}
-                    <h3>La session n'est pas finie </h3>
+                        <h3>La session n'est pas finie </h3><br>
                 {% endif %}
-                {#  {% for club in skatepark.clubs %} #}
-                {#    <p>{{ club.title }}</p> #}
-                {#    {% endfor %} #}
-
-                {#  {% if club.skatepark %}  #}
-                {#   <h3>{{ club.skatepark.town }} {{ club.skatepark.area }}</h3> #}
-                {#{% endif %} #}
             </div>
         </article>
     </section>
