--- a/templates/admin/session_create.html.twig
+++ b/templates/admin/session_create.html.twig
@@ -14,46 +14,10 @@
     <section class="section">
         <div class="detail">
             <div class="justify-between flex fdr">
-                <div class="flex">
-                    {{ form(sessionForm)}}
-                    {{ form_start(sessionForm) }}
-
-                    {{ form_label(sessionForm.title, 'titre', {
-                        'label_attr': {
-                            'class': 'testLabelClass'
-                        }
-                    }) }}
-
-                    {{ form_widget(sessionForm.title, {
-                        'attr': {
-                            'class': 'testClass'
-                        }
-                    }) }}
-
-                    {{ form_label(sessionForm.description) }}
-                    {{ form_widget(sessionForm.description) }}
-
-                    {{ form_label(sessionForm.address) }}
-                    {{ form_widget(sessionForm.address) }}
-
-                    {{ form_label(sessionForm.zippcode) }}
-                    {{ form_widget(sessionForm.zippcode) }}
-
-                    {{ form_label(sessionForm.town) }}
-                    {{ form_widget(sessionForm.town) }}
-
-                    {{ form_label(sessionForm.area) }}
-                    {{ form_widgetsessionbForm.area) }}
-
-                    {{ form_label(sessionForm.coverfilename) }}
-                    {{ form_widget(sessionForm.coverfilename) }}
-
-                    {{ form_widget(sessionForm.submit) }}
-
-                    {{ form_end(sessionForm) }}
+                <div class="flex pad10">
+                    {{ form(sessionForm) }}
                 </div>
             </div>
         </div>
     </section>
 {% endblock main %}
-
