--- a/templates/front/club.html.twig
+++ b/templates/front/club.html.twig
@@ -18,12 +18,16 @@
         </div>
         <div class="line"></div>
         <div class="">
-            <form>
-                <div id="divSearch">
-                    <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
-                    <div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div>
-                    {% block search %}{% endblock search %}
-                </div>
+            <form action="{{ path('search_clubs') }}">
+                <article class="detail">
+                    <div class="card-text" id="divSearch">
+                        <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
+                        </div>
+                        <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                        </div>
+                        {% block search %}{% endblock search %}
+                    </div>
+                </article>
             </form>
         </div>
         <div class="line"></div>
@@ -46,7 +50,8 @@
                             </b><br />
                         </div>
                         <div id="sta1" class="static">
-                            <b><img class="img-card" src="{{ asset('uploads/darwin-cover.jpg') }}" alt="map">
+                            <b>
+                                <img class="img-card" src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt="photo-club">
                             </b><br />
                         </div>
                     </div>
@@ -119,110 +124,27 @@
         </article>
         <article class="detail">
             <div class="card-text">
-                <div class="justifyBox">
-                    <p>{{ club.description }}{{ club.description }}</p>
-                </div>
-            </div>
-            {#  {% for club in skatepark.clubs %}<p>{{ club.title }}</p>{% endfor %} #}
-            {#  {% if club.skatepark %}<h3>{{ club.skatepark.town }} {{ club.skatepark.area }}</h3>{% endif %} #}
-            <div class="card-text">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            {#        <div class="book-image">#}
-            {#            <img class="book-image" src="{{ book.image }}" title="{{ book.title }}" alt="photo de la couverture du livre">#}
-            {#        </div>#}
-        </article>
-        <article class="detail">
-            <div class="card-text">
-                <div class="container" id="tm">
-                    <div class="image" id="bk">
-                        <div id="center">
-                            <img src="{{ asset('icon/fleche_droite.png') }}" alt="logo" class="left logo resp arrow-left" style="z-index:4;">
-                            <a href="" class="media"></a>
-                            <a href=""><img class="" src="{{ asset('uploads/darwin-cover.jpg') }}" alt="map" style="width:100%;z-index:3;"></a>
-                            <a href="" class="media"></a>
-                            <img src="{{ asset('icon/fleche_droite.png') }}" alt="logo" class="arrow-right right logo resp" style="z-index:4;">
+                <div class="card-ic">
+                    <div id="adm-btn" class="adm-btn">
+                        <div class="ic" ><a id="link2" href="{{ path('profile_club_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club">
+                                <br><h4 class="pad5">Créer un club</h4></a>
                         </div>
-                        <div class="image">
-                            <table>
-                                <tr>
-                                    <td>Lundi</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>fermé</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td>Mardi</td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td> 14:00 - </td>
-                                    <td>21:00</td>
-                                </tr>
-                                <tr>
-                                    <td>Mercredi</td>
-                                </tr>
-                                <tr>
-                                    <td> 14:00 - </td>
-                                    <td> 19:00</td>
-                                </tr>
-                                <tr>
-                                    <td>Jeudi</td>
-                                </tr>
-                                <tr>
-                                    <td> 14:00 - </td>
-                                    <td>21:00</td>
-                                </tr>
-                                <tr>
-                                    <td>Vendredi</td>
-                                </tr>
-                                <tr>
-                                    <td> 14:00 - </td>
-                                    <td>21:00</td>
-                                </tr>
-                                <tr>
-                                    <td>Samedi</td>
-                                </tr>
-                                <tr>
-                                    <td> 14:00 - </td>
-                                    <td> 19:00</td>
-                                </tr>
-                                <tr>
-                                    <td>Dimanche</td>
-                                </tr>
-                                <tr>
-                                    <td> 14:00 - </td>
-                                    <td> 19:00</td>
-                                </tr>
-                            </table>
+                        <div class="ic" ><a id="link3" href="{{ path('profile_club_update', {"id": club.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier le club">
+                                <br><h4 class="pad5">Modifier le club</h4></a>
+                        </div>
+                        <div class="ic" ><a id="link4" href="{{ path('profile_club_delete', {"id": club.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club">
+                                <br><h4 class="pad5">Supprimer le club</h4></a>
                         </div>
                     </div>
                 </div>
-            </div>
-        </article>
-                <!--<div class="card" style="border:solid 2px darkblue;"><img class="car" src="{{ asset('uploads/darwin-cover.jpg') }}" alt="map" style="width:100%;"></div>-->
-        <article class="detail">
-            <div class="card-text">
                 <div class="justifyBox">
                     <p>{{ club.description }}{{ club.description }}</p>
                 </div>
             </div>
-                {#  {% for club in skatepark.clubs %}<p>{{ club.title }}</p>{% endfor %} #}
-                {#  {% if club.skatepark %}<h3>{{ club.skatepark.town }} {{ club.skatepark.area }}</h3>{% endif %} #}
+            <div class="card-text">
+                <iframe src="https://www.google.com/maps?q=[{{club.address}}{{club.town}}]&output=embed" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </article>
-            <article class="book-detail">
-                <article class="">
-                </article>
-                <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </article>
-        </section>
-        {#        <div class="book-image">#}
-        {#            <img class="book-image" src="{{ book.image }}" title="{{ book.title }}" alt="photo de la couverture du livre">#}
-        {#        </div>#}
-
+    </section>
 
 {% endblock main %}
