--- a/templates/front/skatepark.html.twig
+++ b/templates/front/skatepark.html.twig
@@ -7,62 +7,128 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
 {% endblock stylesheets %}
 
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="Club"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="Club-icon"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="Skatepark"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="Skatepark-icon"></div>
         </div>
         <div class="line"></div>
         <div class="">
-            <form>
-                <div id="divSearch">
-                    <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
-                    <div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div>
-                    {% block search %}{% endblock search %}
-                </div>
+            <form action="{{ path('search_skateparks') }}">
+                <article class="detail">
+                    <div class="card-text" id="divSearch">
+                        <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
+                        </div>
+                        <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                        </div>
+                        {% block search %}{% endblock search %}
+                    </div>
+                </article>
             </form>
         </div>
         <div class="line"></div>
-    </section>
-    <section class="section">
-        <article class="book-detail">
-            <article class="">
-            </article>
-            <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11313.695719840565!2d-0.5833730935065199!3d44.853663854391!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1653260598126!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+        <article class="card-detail">
+            <div class="card-title"><h1>{{ skatepark.title }}</h1><br></div>
         </article>
-    </section>
-    <section>
-        <article class="book-detail">
-            <!--<div>
-                <form>
-                    <img src="{ asset('icon/loupe.png') }}" alt="loupe" class="logo">
-                    <input type="search" name="q" placeholder="Rechercher">
-                    <input type="submit" value="Lancer !">
-                </form>
-            </div>
-            -->
+        <article class="card-address">
+            <div class="card-title"><h2>{{ skatepark.address }} {{ skatepark.town }}</h2></div>
+        </article>
+        <article class="detail">
             <div class="card-text">
-                <h1>{{ skatepark.title }}</h1><br>
-                <h3>{{ skatepark.address }} {{ skatepark.town }}</h3>
-                <div class="container">
-                    <img src="{{ asset('uploads/darwin.jpg') }}" alt="map" style="width:100%;">
+                <div class="" id="tm">
+                    <div class="" id="tmbk">
+                        <div id="abs1" class="absolute">
+                            <b><img class="left logoBig resp arrow-left" src="{{ asset('icon/fleche_droite.png') }}" alt="Preview">
+                            </b><br />
+                        </div>
+                        <div id="abs2" class="absolute">
+                            <b>
+                                <img class="arrow-right right logoBig resp" src="{{ asset('icon/fleche_droite.png') }}" alt="Next">
+                            </b>
+                            <br />
+                        </div>
+                        <div id="sta1" class="static">
+                            <b>
+                                <img class="img-card" src="{{ asset('uploads/cover/'~skatepark.coverFilename) }}" alt="photo-club">
+                            </b><br />
+                        </div>
+                    </div>
+                    <div class="image">
+                        <table>
+                            <tr>
+                                <td>Lundi</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>fermé</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Mardi</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td>21:00</td>
+                            </tr>
+                            <tr>
+                                <td>Mercredi</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td> 19:00</td>
+                            </tr>
+                            <tr>
+                                <td>Jeudi</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td>21:00</td>
+                            </tr>
+                            <tr>
+                                <td>Vendredi</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td>21:00</td>
+                            </tr>
+                            <tr>
+                                <td>Samedi</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td> 19:00</td>
+                            </tr>
+                            <tr>
+                                <td>Dimanche</td>
+                            </tr>
+                            <tr>
+                                <td> 14:00 - </td>
+                                <td> 19:00</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
             <div class="card-text">
-                <h1>{{ skatepark.title }}</h1>
-                <h3>{{ skatepark.description }}</h3>
-                <h3>{{ skatepark.address }}</h3>
-                <h3>{{ skatepark.town }}</h3>
-
-                {#  {% for club in skatepark.clubs %} #}
-                {#    <p>{{ club.title }}</p> #}
-                {#    {% endfor %} #}
+                <div class="list">
+                    <ul id="abs4" class="absolute indicators ">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="justifyBox">
+                <p>{{ skatepark.description }}{{ skatepark.description }}</p>
+            </div>
+            <div class="card-text">
+                <iframe src="https://www.google.com/maps?q=[{{skatepark.address}}{{skatepark.town}}]&output=embed" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </article>
-    </section>
+      </section>
 {% endblock main %}
