--- a/templates/profile/club.html.twig
+++ b/templates/profile/club.html.twig
@@ -129,12 +129,18 @@
     <section>
         <article class="detail">
             <div class="card-text">
-                <div>
-                    <ul class="adm-btn">
-                        <li><a id="link3" class="pad5" href="{{ path('profile_club_update', {"id": club.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier un club"><br><h4>Modifier un club</h4></a></li>
-                        <li><a id="link4" class="pad5" href="{{ path('profile_club_delete', {"id": club.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club"><br><h4>Supprimer le club</h4></a></li>
-                        <li><a id="link2" class="pad5" href="{{ path('profile_club_create', {"id": club.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club"><br><h4>Créer un club</h4></a></li>
-                    </ul>
+                <div class="card-ic">
+                    <div id="adm-btn" class="adm-btn">
+                        <div class="ic" ><a id="link2" href="{{ path('profile_club_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club">
+                                <br><h4 class="pad5">Créer un club</h4></a>
+                        </div>
+                        <div class="ic" ><a id="link3" href="{{ path('profile_club_update', {"id": club.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier le club">
+                                <br><h4 class="pad5">Modifier le club</h4></a>
+                        </div>
+                        <div class="ic" ><a id="link4" href="{{ path('profile_club_delete', {"id": club.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club">
+                                <br><h4 class="pad5">Supprimer le club</h4></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="justifyBox">
                     <p>{{ club.description }}{{ club.description }}</p>
